<?xml version="1.0"?>
<package format="3">
  <name>DMP_BBO</name>
  <version>0.0.0</version>
  <description>DMP_BBO</description>

  <maintainer email="tbd@tbd.tbd">tbd</maintainer>

  <license>Apache2.0</license>


  <build_depend>git</build_depend>
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>

  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
